--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
 	{% endif %}
 
 	<p>{{ site.description | default: site.github.project_tagline }}</p>
-    <p><i class="fab fa-behance"></i></p>
+    <p><a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> </p>
     
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
