--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
 	{% endif %}
 
 	<p>{{ site.description | default: site.github.project_tagline }}</p>
-    <p><a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance"></i></a> </p>
+  <p><a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square"></i></a> <a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square"></i></a>  <a href="https://github.com/dharmatype"><i class="fab fa-github-square"></i></a> <a href="http://instagram.com/dharmatype"><i class="fab fa-instagram"></i></a> </p>
     
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
