--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,10 +25,12 @@
 
 	<p>{{ site.description | default: site.github.project_tagline }}</p>
 <p>
-<a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-2x"></i></a> 
-<a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-2x"></i></a> 
-<a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-2x"></i></a> 
-<a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-2x"></i></a> </p>
+<a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-sm"></i></a> 
+<a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-sm"></i></a> 
+<a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-sm"></i></a> 
+<a href="https://www.facebook.com/dharmatypefonts"><i class="fab fa-facebook-square fa-sm"></i></i></a> 
+<a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-sm"></i></a> 
+</p>
     
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
