--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,11 +25,11 @@
 
 	<p>{{ site.description | default: site.github.project_tagline }}</p>
 <p>
-<a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-sm"></i></a> 
-<a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-sm"></i></a> 
-<a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-sm"></i></a> 
-<a href="https://www.facebook.com/dharmatypefonts"><i class="fab fa-facebook-square fa-sm"></i></i></a> 
-<a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-sm"></i></a> 
+<a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-lg"></i></a> 
+<a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-lg"></i></a> 
+<a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-lg"></i></a> 
+<a href="https://www.facebook.com/dharmatypefonts"><i class="fab fa-facebook-square fa-lg"></i></i></a> 
+<a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-lg"></i></a> 
 </p>
     
         {% if site.github.is_project_page %}
