--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,8 +47,7 @@
 
       </section>
       <footer>
-      <p>Follow Dharma Type</p>
-      <p>
+      <p>Follow Dharma Type<br>
 <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-lg"></i></a> 
 <a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-lg"></i></a> 
 <a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-lg"></i></a> 
