--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,13 +47,16 @@
 
       </section>
       <footer>
-      <p>Follow Dharma Type<br>
-<a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-lg"></i></a> 
-<a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-lg"></i></a> 
-<a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-lg"></i></a> 
-<a href="https://www.facebook.com/dharmatypefonts"><i class="fab fa-facebook-square fa-lg"></i></i></a> 
-<a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-lg"></i></a> 
-</p>
+        <p>Follow Dharma Type<br>
+        <a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-lg"></i></a> 
+        <a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-lg"></i></a> 
+        <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-lg"></i></a> 
+        <a href="http://instagram.com/dharmatype"><i class="fab fa-instagram fa-lg"></i></a> 
+        <a href="http://dasumeboshi.tumblr.com/"><i class="fab fa-tumblr-square fa-lg"></i></a> 
+        <a href="https://www.facebook.com/dharmatypefonts"><i class="fab fa-facebook-square fa-lg"></i></a> 
+        <a href="https://www.pinterest.com/dharmatype/typefaces/"><i class="fab fa-pinterest-square fa-lg"></i></a> 
+        <a href="https://plus.google.com/103896678370972813717"><i class="fab fa-google-plus-square fa-lg"></i></a> 
+        </p>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
