--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,7 +47,7 @@
 
       </section>
       <footer>
-        <p>Follow Dharma Type<br>
+        <p>Follow Dharma Type by<br>
         <a href="https://github.com/dharmatype"><i class="fab fa-github-square fa-sm"></i></a> 
         <a href="https://twitter.com/dharmatype"><i class="fab fa-twitter-square fa-sm"></i></a> 
         <a href="https://www.behance.net/dharmatype"><i class="fab fa-behance-square fa-sm"></i></a> 
